--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
       uses: paambaati/codeclimate-action@v5.0.0
       if: github.ref_name == 'main'
       env:
-        CC_TEST_REPORTER_ID: 0673af2ec76c56686ac047397bf0231113d53088ffbdd7bf30a6d6b24a2dc49f
+        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
         coverageCommand: make test-coverage
         debug: true
