--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,15 +17,18 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        pip install poetry
-        make install
+          pip install poetry
+          pip install flake8
+          pip install pytest
+          pip install pytest-cov
+          make build
+          make package-install
     - name: Run linter and pytest
       run: |
         make lint
         make test
     - name: Test & publish code coverage
       uses: paambaati/codeclimate-action@v5.0.0
-      if: github.ref_name == 'main'
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
