--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 pytest-cov = "^5.0.0"
+coverage = "^7.5.1"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
