--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ packages = [
 python = "^3.10"
 pytest-cov = "^5.0.0"
 coverage = "^7.5.1"
+pyyml = "^0.0.2"
+pyyaml = "^6.0.1"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
