--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest-cov = "^5.0.0"
 coverage = "^7.5.1"
 pyyml = "^0.0.2"
 pyyaml = "^6.0.1"
+simplejson = "^3.19.2"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
