--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,17 +18,13 @@ jobs:
     - name: Install dependencies
       run: |
           pip install poetry
-          pip install flake8
-          pip install pytest
-          pip install pytest-cov
-          make build
-          make package-install
+          make install
     - name: Run linter and pytest
       run: |
         make lint
         make test
     - name: Test & publish code coverage
-      uses: paambaati/codeclimate-action@v5.0.0
+      uses: paambaati/codeclimate-action@v8.0.0
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
